[gd_scene load_steps=3 format=2]

[ext_resource path="res://BootScreen.gd" type="Script" id=1]
[ext_resource path="res://splash.png" type="Texture" id=2]

[node name="BootScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="dialog" type="FileDialog" parent="."]
margin_left = 228.0
margin_top = 87.0
margin_right = 1045.0
margin_bottom = 649.0
rect_min_size = Vector2( 150, 52.5 )
popup_exclusive = true
window_title = "set the SimCity 4 directory"
mode_overrides_title = false
mode = 2
access = 2
show_hidden_files = true

[node name="LoadProgress" type="ProgressBar" parent="."]
anchor_left = 0.25
anchor_top = 0.514
anchor_right = 0.75
anchor_bottom = 0.55
margin_left = -10.0
margin_top = 219.92
margin_right = -10.0
margin_bottom = 219.92

[node name="Label" type="Label" parent="."]
margin_left = 310.0
margin_top = 568.0
margin_right = 433.0
margin_bottom = 582.0
text = "Loading OpenSC4..."

[node name="CurrentFileLabel" type="Label" parent="."]
margin_left = 310.0
margin_top = 631.0
margin_right = 350.0
margin_bottom = 645.0

[node name="background" type="Sprite" parent="."]
position = Vector2( 636, 366 )
scale = Vector2( 0.6625, 0.675 )
z_index = -1
texture = ExtResource( 2 )

[node name="NextScene" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -381.0
margin_top = -139.0
margin_right = 381.0
margin_bottom = 139.0

[node name="VBoxContainer" type="VBoxContainer" parent="NextScene"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -122.0
margin_top = -19.0
margin_right = -122.0
margin_bottom = -19.0

[node name="Label" type="Label" parent="NextScene/VBoxContainer"]
margin_right = 244.0
margin_bottom = 14.0
text = "Game files loaded"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="NextScene/VBoxContainer"]
margin_top = 18.0
margin_right = 244.0
margin_bottom = 38.0

[node name="GameButton" type="Button" parent="NextScene/VBoxContainer/HBoxContainer"]
margin_right = 96.0
margin_bottom = 20.0
text = "Launch game"

[node name="DATExplorerButton" type="Button" parent="NextScene/VBoxContainer/HBoxContainer"]
margin_left = 100.0
margin_right = 244.0
margin_bottom = 20.0
text = "Launch DAT explorer"

[connection signal="confirmed" from="dialog" to="." method="_on_dialog_confirmed"]
[connection signal="dir_selected" from="dialog" to="." method="_on_dialog_dir_selected"]
[connection signal="pressed" from="NextScene/VBoxContainer/HBoxContainer/GameButton" to="." method="_on_GameButton_pressed"]
[connection signal="pressed" from="NextScene/VBoxContainer/HBoxContainer/DATExplorerButton" to="." method="_on_DATExplorerButton_pressed"]
